migrate URL to URI